--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://qiaozhibao96_db_user:nyc2026@cluster0.9qel9im.mongodb.net
-# clerk
 
-
+# clerk keys
 CLERK_PUBLISHABLE_KEY=pk_test_a2luZC1jb3VnYXItMjYuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_10GHFLQfcKrk08BlxXpwl89MI6HtdT1CHwoCZ67uJo
+CLERK_WEBHOOK_SECRET = whsec_Xh4OoBzq5wOf6IQZSc8wLjbeob5sUxRX
