--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,9 @@ MONGODB_URI=mongodb+srv://qiaozhibao96_db_user:nyc2026@cluster0.9qel9im.mongodb.
 CLERK_PUBLISHABLE_KEY=pk_test_a2luZC1jb3VnYXItMjYuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_10GHFLQfcKrk08BlxXpwl89MI6HtdT1CHwoCZ67uJo
 CLERK_WEBHOOK_SECRET = whsec_Xh4OoBzq5wOf6IQZSc8wLjbeob5sUxRX
+
+
+# cloudinary
+CLOUDINARY_CLOUD_NAME = dd9vf4m0f
+CLOUDINARY_API_KEY=258146486639167
+CLOUDINARY_API_SECRET =L5Q9mbq7ohgQb4wwog3kkd9ItUM
