--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "svix": "^1.81.0"
   },
   "devDependencies": {
