--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,6 @@
 # VITE_CLERK_PUBLISHABLE_KEY=YOUR_PUBLISHABLE_KEY
 VITE_CLERK_PUBLISHABLE_KEY = pk_test_a2luZC1jb3VnYXItMjYuY2xlcmsuYWNjb3VudHMuZGV2JA
 // NO Slice / at the end 
-VITE_BACKEND_URL = http://localhost:3000 
+# VITE_BACKEND_URL = http://localhost:3000 
+ VITE_BACKEND_URL = https://vite-hotel-booking-backend.vercel.app
 VITE_CURRENCY = $
